2004-09-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Modified the implementation of hierarchical methods;
	* snit.test	this involved extending the syntax of method
			"using" patterns to better support the 
			hiearchical case.

2004-09-12  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Added support for hierarchical type methods,
	* snit.test	analogously to the support for regular methods.
	* README.txt

	* snit.tcl	Refactored the compilation of hierarchical
	* snit.test	methods and typemethods to remove duplicated code.

2004-09-10  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Added support for hierarchical methods: methods
	* snit.test     with submethods.  The documentation has not yet
	* README.txt    been updated.

	* snit.tcl      Bug fix: "delegate method {a b} to comp" now produces
	* snit.test     the call "$comp a b" instead of "$comp a_b".

2004-09-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Bug fix: read-only options were read-only only
	* snit.test     if they weren't set at creation time; the 
	* README.txt    configure cache wasn't being cleared properly
	                after creation.

2004-08-28  Will Duquette  <will@wjduquette.com>

	* snit.tcl:     Minor tweaks to instance creation to improve
	* dictionary    speed.  No major gain.  Also, -simpledispatch yes
	* snit.man	now supports instance renaming again.
	* snitfaq.man
	

2004-08-22  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Defined the -simpledispatch pragma.  Updated
	* snit.test     the test suite and the relevant documentation.
	* snit.man
	* README.txt
	* snitfaq.man
	* dictionary

2004-08-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Defined the -hastypemethods pragma, and added
	* snit.test     relevant tests and documentation.
	* snit.man      
	* README.txt
	* snitfaq.man

2004-08-12  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Under appropriate conditions, calling a